--- a/Resources/Prototypes/_Goobstation/Entities/Objects/Specific/Medical/medical_patch_prefilled.yml
+++ b/Resources/Prototypes/_Goobstation/Entities/Objects/Specific/Medical/medical_patch_prefilled.yml
@@ -2,7 +2,7 @@
   parent: BaseMedicalPatch
   id: MedicalPatchPrefilledBase
   name: prefilled medical patch
-  description: Medical patch filled with chemicals
+  description: A Pre-Filled Medical patch. Slower than the average patch, but that prevents overdose.
   abstract: true
   components:
   - type: Sprite
@@ -21,32 +21,32 @@
         maxVol: 30
   - type: MedicalPatch
     singleUse: true
-    transferAmount: 0.25
+    transferAmount: 0.5 # Funkychem
 
 - type: entity
   parent: MedicalPatchPrefilledBase
-  id: MedicalPatchPrefilledBicaridine
+  id: MedicalPatchPrefilledBicaridine # Funkychem - Same name kept to spare me effort [lol]
   name: brute patch
-  suffix: Bicaridine
+  suffix: Libital
   components:
   - type: Label
-    currentLabel: Bicaridine 30u
+    currentLabel: Libital 30u
   - type: SolutionContainerManager
     solutions:
       drink:
         maxVol: 30
         reagents:
-          - ReagentId: Bicaridine
+          - ReagentId: Libital
             Quantity: 30
 
 - type: entity
   parent: MedicalPatchPrefilledBase
-  id: MedicalPatchPrefilledDermaline
+  id: MedicalPatchPrefilledDermaline # Same as Libital - Funkychem
   name: burn patch
-  suffix: Dermaline
+  suffix: Aiuri
   components:
   - type: Label
-    currentLabel: Dermaline 30u
+    currentLabel: Aiuri 30u
   - type: SolutionContainerManager
     solutions:
       drink:
@@ -54,3 +54,22 @@
         reagents:
           - ReagentId: Dermaline
             Quantity: 30
+
+# Funkychem Addition [For Rad Kits]
+- type: entity
+  parent: MedicalPatchPrefilledBase
+  id: MedicalPatchPrefilled
+  name: anti-rad patch
+  suffix: Arith/Podide
+  components:
+  - type: Label
+    currentLabel: Prevents + Heals Rads
+  - type: SolutionContainerManager
+    solutions:
+      drink:
+        maxVol: 30
+        reagents:
+          - ReagentId: Arithrazine
+            Quantity: 20
+          - ReagentId: PotassiumIodide
+            Quantity: 10
