Fixes Grani Colour

--- a/Resources/Prototypes/_Funkystation/Reagents/medicine.yml
+++ b/Resources/Prototypes/_Funkystation/Reagents/medicine.yml
@@ -323,7 +323,7 @@
   desc: A Commonly sold medicine for all types of injuries, but extremely slow acting.
   physicalDesc: reagent-physical-desc-gloopy
   flavor: medicine
-  color: "#00e5ff"
+  color: "#c7e4e8"
   metabolisms:
     Medicine:
       metabolismRate: 0.05
