--- a/Resources/Prototypes/Polymorphs/polymorph.yml
+++ b/Resources/Prototypes/Polymorphs/polymorph.yml
@@ -207,7 +207,7 @@
 - type: polymorph
   id: CorgiMorph
   configuration:
-    entity: MobCarpMagic
+    entity: MobCorgi
     forced: true
     inventory: None
     transferName: true
