--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
@@ -161,11 +161,11 @@
     tags:
     - EmergencyMedipen
 
-- type: entity
+- type: entity # Funkychem
   name: poison auto-injector
   parent: ChemicalMedipen
   id: AntiPoisonMedipen
-  description: A rapid dose of anti-poison. Contains ultravasculine and epinephrine.
+  description: A rapid dose of anti-poison. Contains pentetic acid and epinephrine.
   components:
   - type: Sprite
     sprite: Objects/Specific/Medical/medipen.rsi
@@ -179,10 +179,10 @@
   - type: SolutionContainerManager
     solutions:
       pen:
-        maxVol: 15
+        maxVol: 20
         reagents:
-        - ReagentId: Ultravasculine
-          Quantity: 10
+        - ReagentId: PenteticAcid
+          Quantity: 15
         - ReagentId: Epinephrine
           Quantity: 5
   - type: Tag
