--- a/Resources/Prototypes/XenoArch/Effects/normal_effects.yml
+++ b/Resources/Prototypes/XenoArch/Effects/normal_effects.yml
@@ -471,11 +471,11 @@
   components:
   - type: FoamArtifact
     reagents:
-    - Dermaline
+    - Aiuri # Funkychem
     - Arithrazine
-    - Bicaridine
+    - Libital # Funkychem
     - Inaprovaline
-    - Kelotane
+    - Multiver # Funkychem
     - Dexalin
     - Omnizine
 
@@ -489,18 +489,19 @@
       maxVol: 500
       canReact: false
     possibleChemicals:
-    - Dermaline
+    - Lenturi # Funkychem
     - Arithrazine
-    - Bicaridine
+    - Libital # Funkychem
+    - Probital # Funkychem
     - Inaprovaline
-    - Kelotane
+    - Aiuri # Funkychem
     - Dexalin
     - Omnizine
     - Napalm
     - Toxin
     - Epinephrine
     - Cognizine
-    - Ultravasculine
+    - PenteticAcid # Funkychem
     - Desoxyephedrine
     - Pax
     - Siderlac
