guh 2: second coming of my dumbassery :3

--- a/Resources/Prototypes/_Goobstation/Entities/Objects/Specific/Medical/medical_patch_prefilled.yml
+++ b/Resources/Prototypes/_Goobstation/Entities/Objects/Specific/Medical/medical_patch_prefilled.yml
@@ -58,7 +58,7 @@
 # Funkychem Addition [For Rad Kits]
 - type: entity
   parent: MedicalPatchPrefilledBase
-  id: MedicalPatchPrefilled
+  id: MedicalPatchPrefilledAntiRad
   name: anti-rad patch
   suffix: Arith/Podide
   components:
