--- a/Resources/Prototypes/_Funkystation/Reagents/medicine.yml
+++ b/Resources/Prototypes/_Funkystation/Reagents/medicine.yml
@@ -141,6 +141,7 @@
       metabolismRate:
       effects:
       - !type:HealthChange
+        conditions:
         - !type:ReagentThreshold
           max: 20
         damage:
