--- a/Resources/Prototypes/_Funkystation/Reagents/medicine.yml
+++ b/Resources/Prototypes/_Funkystation/Reagents/medicine.yml
@@ -138,7 +138,7 @@
   color: "#634aef"
   metabolisms:
     Medicine:
-      metabolismRate:
+      metabolismRate: 0.2
       effects:
       - !type:HealthChange
         conditions:
