--- a/Resources/Prototypes/Roles/Jobs/Fun/visitors_startinggear.yml
+++ b/Resources/Prototypes/Roles/Jobs/Fun/visitors_startinggear.yml
@@ -604,7 +604,7 @@
     pocket1: PillCanisterHyronalin
     pocket2: PillCanisterRandom
   inhand:
-  - SyringeBicaridine
+  - SyringeLibital
 
 - type: startingGear
   id: VisitorVirologist
@@ -1558,7 +1558,7 @@
     back: ClothingBackpackDuffel
     ears: ClothingHeadsetService
     pocket1: WeaponFlareGun
-    pocket2: PillCanisterDylovene
+    pocket2: PillCanisterMultiver
 
 - type: startingGear
   id: VisitorZookeeperAlt
