--- a/Resources/Prototypes/Roles/Jobs/Fun/visitors_startinggear.yml
+++ b/Resources/Prototypes/Roles/Jobs/Fun/visitors_startinggear.yml
@@ -1571,7 +1571,7 @@
     back: WeaponShotgunDoubleBarreledRubber
     ears: ClothingHeadsetService
     pocket1: WeaponFlareGun
-    pocket2: PillCanisterDylovene
+    pocket2: PillCanisterMultiver
 
 # Misc
 
